tests/ui/invalid_pyo3imports.stderr
error: invalid import statement
  --> tests/ui/invalid_pyo3imports.rs:18:25
   |
18 | #[pyo3import(py_adders: form adders import addone)]
   |                         ^^^^

error: invalid import statement
  --> tests/ui/invalid_pyo3imports.rs:22:37
   |
22 | #[pyo3import(py_adders: from adders improt addone)]
   |                                     ^^^^^^

error: expected attribute arguments in parentheses: #[pyo3import(...)]
  --> tests/ui/invalid_pyo3imports.rs:26:3
   |
26 | #[pyo3import]
   |   ^^^^^^^^^^

error: expected `:`
  --> tests/ui/invalid_pyo3imports.rs:30:24
   |
30 | #[pyo3import(py_adders from adders import addone)]
   |                        ^^^^
